RenderImage ignores its percent width/height when setContainerSizeForRenderer https://bugs.webkit.org/show_bug.cgi?id=80431

Patch by Yong Li <yoli@rim.com> on 2012-03-07
Reviewed by George Staikos.

Not only respect fixed width/height explicitly specified in img element, but also
respect percent width/height when determining container size for images.

No new tests because there is no functional change but only internal buffer sizes.

* rendering/RenderImage.cpp:
(WebCore::RenderImage::computeReplacedLogicalWidth):

Canonical link: https://commits.webkit.org/97705@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110091 268f45cc-cd09-0410-ab3c-d52691b4dbfc